--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "mockjs": "^1.1.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.3.2",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
